Correction of the display bug that made the component be visible on close  on mobile

--- a/src/components/SidePanelNavigation/SidePanelNavigation.module.css
+++ b/src/components/SidePanelNavigation/SidePanelNavigation.module.css
@@ -2,36 +2,32 @@
   position: absolute;
   right: 0px;
   top: 50%;
-  transform: translate(100%, -50%);
+  font-size: 20px;
+  transform: translate(0%, -50%);
   z-index: 1;
-  /* transform: translateY(-50%); */
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 10px;
   padding: 10px;
-  /* padding-right: 20px; */
   border-top-left-radius: var(--small-radius);
   border-bottom-left-radius: var(--small-radius);
-  /* border-top-left-radius: 15px;
-  border-bottom-left-radius: 15px; */
   transition: var(--normal-transition) var(--default-animation);
 }
 
-.sectionNavigation.open {
-  transform: translate(0%, -50%);
+.sectionNavigation.close {
+  transform: translate(100%, -50%);
 }
 
 .sectionNavigation > button {
   transition: inherit;
-  font-size: 20px;
 }
 
 .sectionNavigation > button:first-of-type svg {
   transition: inherit;
 }
 
-.sectionNavigation.open > button:first-of-type svg {
+.sectionNavigation.close > button:first-of-type svg {
   transform: rotateY(180deg);
 }
 
@@ -44,7 +40,6 @@
   right: 100%;
   padding: 5px;
   border-radius: inherit;
-  font-size: 20px;
   border-top-left-radius: var(--small-radius);
   border-bottom-left-radius: var(--small-radius);
 }
@@ -70,9 +65,6 @@
     padding: 5px;
     padding-top: 10px;
     gap: 5px;
-  }
-
-  .sectionNavigation svg {
-    height: 15px;
+    font-size: 15px;
   }
 }
